analyzer/tests/snapshots/errors__array_mixed_types.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: array elements must have same type
  ┌─ [snippet]:3:17
  │
3 │   x: u256[3] = [1, address(0), "hi"]
  │                 ^  ---------- this has type `address`
  │                 │   
  │                 this has type `u256`

error: array elements must have same type
  ┌─ [snippet]:3:17
  │
3 │   x: u256[3] = [1, address(0), "hi"]
  │                 ^              ---- this has type `string<2>`
  │                 │               
  │                 this has type `u256`


